--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
+    <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="OKLAHOMA CITY BANKRUPTCY ATTORNEY
       ATTORNY, ATORNEY, ATTORNEY, ATTORNIES, LAWYER, LAYWER, LAWYER, BAKNRUTPCY, CHAPTER 7 BANKRUPTCY, CHAPTER 13 BANKRUTPCY, DEBT RELIEF, BANKRUPTCY LITIGATION, WORKOUT, UNSECURED DEBT, CREDIT CARD DEBT, FORECLOSURE, ABUSIVE CREDITORS, MEANS TEST, REPOSSESSION, LIEN, DEBT RELIEF AGENCY, PAYMENT PLAN, CONSUMER BANKRUPTCY, FILE CHAPTER 7 13, OKLAHOMA CITY, EDMOND, NORTHWEST OKLAHOMA CITY, CREDIT CARDS, MEDICAL BANKRUPTCY, BANKRUPTSY, BANKRUPCTY, BANKRUTPCY">
@@ -9,9 +10,9 @@
     <title>Angus Law | The bancrupcy law firm working for the people.</title>
     <link rel="stylesheet" href="index_files/style.css" type="text/css">
     <!--Start of Google Tracking Code-->
-    <script src="index_files/dc.js" async="" type="text/javascript"></script><script type="text/javascript">
+    <script type="text/javascript">
 
-  	  var _gaq = _gaq || [];
+		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-35448836-1']);
 		  _gaq.push(['_trackPageview']);
 
@@ -31,7 +32,8 @@
           <h1> Angus&nbsp; Law</h1>
           <h2><br>
           </h2>
-          <img style="top: 96px; left: 0px; width: 882px; height: 372px;" alt="" src="index_files/header2.jpg"><br>
+          <img style="top: 96px; left: 0px; width: 882px; height: 372px;" alt=""
+            src="index_files/header2.jpg"><br>
           <br>
           <p class="lede"><br>
           </p>
@@ -107,6 +109,5 @@
         </div>
       </div>
     </div>
-  
-
-</body></html>
+  </body>
+</html>
