--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
           <br>
           <br>
           <p></p>
-          <p class="rights"> Copyright 2012<br>
+          <p class="rights"> Copyright 2012-2013<br>
             Joesph Angus<br>
             All Rights Reserved</p>
           <p class="rights">Photo from <a href="https://secure.flickr.com/photos/ethanhickerson/6010321677/">Ethan
               Hickerson</a><br>
+          Hosted on <a href="http://pages.github.com">GitHub Pages</a>
           </p>
         </div>
       </div>
