github link edit

--- a/index.html
+++ b/index.html
@@ -104,8 +104,7 @@
             Joesph Angus<br>
             All Rights Reserved</p>
           <p class="rights">Photo from <a href="https://secure.flickr.com/photos/ethanhickerson/6010321677/">Ethan
-              Hickerson</a><br>
-          Hosted on <a href="http://pages.github.com">GitHub Pages</a>
+              Hickerson</a><br> Hosted on <a href="http://pages.github.com">GitHub Pages</a>
           </p>
         </div>
       </div>
